// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Stories Snapshots > Button > Primary 1`] = `
.c0 {
  padding: 10px 20px;
  border: none;
  border-radius: 30px;
  color: white;
  background-color: #083e75;
  cursor: pointer;
  font-size: 16px;
  transition: background-color 0.2s;
}

.c0:hover {
  background-color: #083e75;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px rgba(0,123,255,0.25);
}

<div>
  <button
    class="c0"
    variant="primary"
  >
    Primary
  </button>
</div>
`;

exports[`Stories Snapshots > Button > Secondary 1`] = `
.c0 {
  padding: 10px 20px;
  border: none;
  border-radius: 30px;
  color: white;
  background-color: #6c757d;
  cursor: pointer;
  font-size: 16px;
  transition: background-color 0.2s;
}

.c0:hover {
  background-color: #545b62;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px rgba(0,123,255,0.25);
}

<div>
  <button
    class="c0"
    variant="secondary"
  >
    Secondary
  </button>
</div>
`;
